force-app/main/default/objects/Mes__c/Mes__c.object-meta.xml
<CustomObject>
   
    <label>Mes</label>
    <nameField>
        <label>Mes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>