force-app/main/default/objects/Mes__c/fields/Ahorros_Proyectados__c.field-meta.xml
<CustomField>
    <fullName>Ahorros_Proyectados__c</fullName>
    <formula>Ingresos_Totales__c  - Gastos_Totales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ahorros Proyectados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>