force-app/main/default/objects/Mes__c/fields/Alimentos__c.field-meta.xml
<CustomField>
    <fullName>Alimentos__c</fullName>
    <label>Alimentos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>