force-app/main/default/objects/Mes__c/fields/Alquiler__c.field-meta.xml
<CustomField>
    <fullName>Alquiler__c</fullName>
    <label>Alquiler</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>