force-app/main/default/objects/Mes__c/fields/Celulares__c.field-meta.xml
<CustomField>
    <fullName>Celulares__c</fullName>
    <label>Celulares</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>