force-app/main/default/objects/Mes__c/fields/Deudas__c.field-meta.xml
<CustomField>
    <fullName>Deudas__c</fullName>
    <label>Deudas</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>