force-app/main/default/objects/Mes__c/fields/Diezmo_y_Ofrendas__c.field-meta.xml
<CustomField>
    <fullName>Diezmo_y_Ofrendas__c</fullName>
    <label>Diezmo y Ofrendas</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>