force-app/main/default/objects/Mes__c/fields/Disponible_Alimentos__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Alimentos__c</fullName>
    <formula>Alimentos__c - Total_Alimentos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Alimentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>