force-app/main/default/objects/Mes__c/fields/Disponible_Alquiler__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Alquiler__c</fullName>
    <formula>Alquiler__c - Total_Alquiler__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Alquiler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>