force-app/main/default/objects/Mes__c/fields/Disponible_Celulares__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Celulares__c</fullName>
    <formula>Celulares__c - Toal_Celulares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Celulares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>