force-app/main/default/objects/Mes__c/fields/Disponible_Deudas__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Deudas__c</fullName>
    <formula>Deudas__c - Total_Deudas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Deudas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>