force-app/main/default/objects/Mes__c/fields/Disponible_Diezmo_y_Ofrendas__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Diezmo_y_Ofrendas__c</fullName>
    <formula>Diezmo_y_Ofrendas__c - Total_Diezmo_y_Ofrenda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Diezmo y Ofrendas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>