force-app/main/default/objects/Mes__c/fields/Disponible_Entretenimiento__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Entretenimiento__c</fullName>
    <formula>Entretenimiento__c -  Total_Entretenimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Entretenimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>