force-app/main/default/objects/Mes__c/fields/Disponible_Otros__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Otros__c</fullName>
    <formula>Otros__c - Total_Otros__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Otros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>