force-app/main/default/objects/Mes__c/fields/Disponible_Servicios__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Servicios__c</fullName>
    <formula>Servicios__c -  Total_Servicios__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Servicios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>