force-app/main/default/objects/Mes__c/fields/Disponible_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Transporte__c</fullName>
    <formula>Transporte__c -  Total_Transporte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Transporte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>