force-app/main/default/objects/Mes__c/fields/Disponible_Varios__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Varios__c</fullName>
    <formula>Varios__c -  Total_Varios__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible Varios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>