force-app/main/default/objects/Mes__c/fields/Entretenimiento__c.field-meta.xml
<CustomField>
    <fullName>Entretenimiento__c</fullName>
    <label>Entretenimiento</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>