force-app/main/default/objects/Mes__c/fields/Gastos_Totales__c.field-meta.xml
<CustomField>
    <fullName>Gastos_Totales__c</fullName>
    <label>Gastos Totales</label>
    <summarizedField>Gasto__c.Monto__c</summarizedField>
    <summaryForeignKey>Gasto__c.Mes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>