force-app/main/default/objects/Mes__c/fields/Ingresos_Totales__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Totales__c</fullName>
    <label>Ingresos Totales</label>
    <summarizedField>Ingreso__c.Monto__c</summarizedField>
    <summaryForeignKey>Ingreso__c.Mes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>