force-app/main/default/objects/Mes__c/fields/Otros__c.field-meta.xml
<CustomField>
    <fullName>Otros__c</fullName>
    <label>Otros</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>