force-app/main/default/objects/Mes__c/fields/Servicios__c.field-meta.xml
<CustomField>
    <fullName>Servicios__c</fullName>
    <label>Servicios</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>