force-app/main/default/objects/Mes__c/fields/Total_Otros__c.field-meta.xml
<CustomField>
    <fullName>Total_Otros__c</fullName>
    <label>Total Otros</label>
    <summarizedField>Gasto__c.Monto__c</summarizedField>
    <summaryFilterItems>
        <field>Gasto__c.Categoria__c</field>
        <operation>equals</operation>
        <value>Otros</value>
    </summaryFilterItems>
    <summaryForeignKey>Gasto__c.Mes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>