force-app/main/default/objects/Mes__c/fields/Transporte__c.field-meta.xml
<CustomField>
    <fullName>Transporte__c</fullName>
    <label>Transporte</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>