force-app/main/default/objects/Mes__c/fields/Varios__c.field-meta.xml
<CustomField>
    <fullName>Varios__c</fullName>
    <label>Varios</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>